--- a/flex.html
+++ b/flex.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <div id="container">
-        <div>Display Flex Aqui</div>
-        <div>
+        <div class="item-menu">
+            Display Flex Aqui
+        </div>
+        <div class="item-menu"''>
             Murilo
         </div>
-        <div>
+        <div class="item-menu"  >
             Pw1 AMS
         </div>
     </div>
